syntax = "proto3";

option go_package = "github.com/yago-123/galedb/pkg/consensus";

service LBNodeManager {
  rpc RegisterNode(NodeInfo) returns (RegisterResponse);
  // rpc UnregisterNode(NodeInfo) returns (UnregisterResponse);

  rpc ReportHealthStatus(stream HealthStatus) returns (stream HealthStatus);
  // rpc HealthCheck(stream HealthCheckRequest) returns (stream HealthCheckResponse);
}

message NodeInfo {
  string node_id = 1;
  string ip = 2;
  int32 port = 3;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

// Health status message, can be used to report health updates or queries
message HealthStatus {
  string node_id = 1;
  string service = 2; // The service origin (e.g., "client", "server")
  string status = 3;  // The health status (e.g., "SERVING", "NOT_SERVING")
  string message = 4; // Optional message providing more context (e.g., error details)
}

/*
message UnregisterResponse {
  bool success = 1;
  string message = 2;
}

message HealthCheckRequest {
  string node_id = 1;
  int32 status = 2;
  optional string status_message = 3;
}

message HealthCheckResponse {
  bool acknowledged = 1;
  optional string action = 2; // e.g., "restart", "drain", etc.
}


 */